--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -43,5 +43,6 @@
         </div>
       </div>
     </div>
+    <footer class="bot-foot"><nav class="nav_bot_foot"></nav></footer>
 </body>
 </html>
